# PredictGoal

./: .gitignore  README.md  SPEC.md  render.yaml
agent-skills/predictgoal-odds/: SKILL.md  predictgoal_odds.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  store.py
backend/app/api/: insights.py  matches.py  predictions.py  wallet.py
backend/app/core/: config.py
backend/app/schemas/: match.py
backend/app/services/: analytics.py  balance.py  cctp.py  worldcup.py  x402.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  x402Client.ts
frontend/src/components/: ConnectPayment.tsx  ConnectWallet.tsx
frontend/src/pages/: Leaderboard.tsx  MatchDetail.tsx  Matches.tsx  Wallet.tsx
mcp-server/: MCP_README.md  demo_odds.py  pyproject.toml  server.py
mcp-server/tests/: test_tools.py
