[project]
name = "predictgoal-backend"
version = "0.1.0"
description = "Backend for PredictGoal Prediction Market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.4.0",
    "eth-account>=0.13.0",
    "web3>=7.10.0",
    "python-dotenv>=1.0.1",
    "structlog>=25.1.0",
    "slowapi>=0.1.9",
    "redis>=5.2.0",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "UP037"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
