[project]
name = "predictgoal-mcp"
version = "0.1.0"
description = "MCP Server for PredictGoal — prediction market agent tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
